portfolio big update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -7,29 +8,32 @@
 	<meta name="description" content="UX and UI designer portfolio, Lisbon, Portugal">
 	<meta name="author" content="dizparada is a UX &amp; UI designer based in Lisbon Portugal">
 	<title>Dizparada: UX &amp UI Designer</title>
-	<link type='text/css' rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
 	<link type='text/css' rel="stylesheet" href="css/app.css">
-	<link type='text/css' rel="stylesheet" href="fonts/foundation-icons.css" >
-	<link rel="shortcut icon" href="favicon.png">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
-	<div id="particles">
+	<div class="hero-banner">
+		<canvas id="particles"></canvas>
 		<div id="intro">
 			<h1>Hi I'm Dizparada</h1>
 			<h2>a passionate UX &amp; UI designer, from Portugal.</h2>
 			<ul class="social">
 				<li>
-					<a href="https://www.facebook.com/Dizparada.PT" target="_blank" title="facebook" alt="facebook"><img src="images/1.svg"></a>
+					<a href="https://medium.com/@dizparada" target="_blank" title="medium" alt="medium"><img
+							src="images/1.svg"></a>
 				</li>
 				<li>
-					<a href="https://twitter.com/Dizparada" title="twitter" alt="twitter" target="_blank"><img src="images/2.svg"></a>
+					<a href="https://twitter.com/Dizparada" title="twitter" alt="twitter" target="_blank"><img
+							src="images/2.svg"></a>
 				</li>
 				<li>
-					<a href="https://dribbble.com/Dizparada" title="dribbble" alt="dribbble" target="_blank"><img src="images/3.svg"></a>
+					<a href="https://dribbble.com/Dizparada" title="dribbble" alt="dribbble" target="_blank"><img
+							src="images/3.svg"></a>
 				</li>
 				<li>
-					<a href="https://www.flickr.com/photos/dizparada/" title="flickr" alt="flickr" target="_blank"><img src="images/4.svg"></a>
+					<a href="https://www.flickr.com/photos/dizparada/" title="flickr" alt="flickr" target="_blank"><img
+							src="images/4.svg"></a>
 				</li>
 			</ul>
 
@@ -38,8 +42,6 @@
 		<div class="clouds">
 			<div class="cloud"></div>
 		</div>
-
-
 	</div>
 
 	<section id="timeline" class="cd-container">
@@ -48,10 +50,12 @@
 			</div>
 			<div class="cd-timeline-content">
 
-				<p>I'm dizparada because my surname means stopped, so i 'nicknamed’ myself with a name that shows the opposite.</p>
+				<p>I'm dizparada because my surname means stopped (my original name is Ana 'Parada'), so I 'nicknamed’
+					myself with a name that shows the
+					opposite.</p>
 				<span class="cd-date">Dizparada's born</span>
 			</div>
-			
+
 		</div>
 
 		<div class="cd-timeline-block">
@@ -60,25 +64,29 @@
 			</div>
 			<div class="cd-timeline-content">
 
-				<p>In the last ten years i've worked in different areas, not looking for the right thing to do, but because my interests were changing according to new trends or with something i was discovering in the tech area.</p>
+				<p>In the last 10 years I've worked in different areas, not looking for the right thing to do, but
+					because my interests were changing according to new trends or with something I was discovering in
+					the tech area.</p>
 
 				<span class="cd-date">Last 10 years</span>
 			</div>
-	
+
 		</div>
-		
+
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 
 			</div>
-			
+
 
 			<div class="cd-timeline-content">
 
-				<p>In 2006, when i was taking my bachelor in new technologies of communication. I started to develop some things with html and php , that were lectured in that course. I did some websites with small backoffices as a freelancer webdeveloper.</p>
+				<p>In 2006, when i was taking my bachelor in New Technologies of Communication, at University of Aveiro.
+					I did my first projects
+					using HTML and PHP as also some websites with small backoffices as a freelancer webdeveloper.</p>
 				<span class="cd-date">Sep 2006</span>
 			</div>
-			
+
 		</div>
 
 		<div class="cd-timeline-block">
@@ -88,8 +96,12 @@
 
 			<div class="cd-timeline-content">
 
-				<p>Later (2009), i started the master in multimedia and i did some works related to technology in education. I designed and developed a working prototype web application that allowed students help each other learning, regarding different subjects and suports -
-					<a href="https://sigarra.up.pt/fpceup/pt/pub_geral.pub_view?pi_pub_base_id=19543" target="_blank"><strong>Weedu.</strong></a></p>
+				<p>Later (2009), i started the Master in Multimedia at Faculty of Enginnering of University of Porto.
+					During my mmaster thesis I've designed and developed a working prototype web application that
+					allowed students help
+					each other learning, regarding different subjects and suports -
+					<a href="https://sigarra.up.pt/fpceup/pt/pub_geral.pub_view?pi_pub_base_id=19543"
+						target="_blank"><strong>Weedu.</strong></a></p>
 				<span class="cd-date">Sep 2009</span>
 			</div>
 		</div>
@@ -99,23 +111,25 @@
 			</div>
 
 			<div class="cd-timeline-content">
-				<p>Coincidently or not, my next job was creating educational resources at <a href="http://leya.com" target="_blank"><strong>Leya Mediabooks</strong></a>.</p>
+				<p>Coincidently or not, my next job was creating educational resources at <a href="http://leya.com"
+						target="_blank"><strong>Leya Mediabooks</strong></a>.</p>
 				<span class="cd-date">Nov 2011</span>
 			</div>
 			<!-- cd-timeline-content -->
 		</div>
 		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-movie">
-
+				<div class="cd-timeline-img cd-movie">
+					</div>
+				<div class="cd-timeline-content">
+					<p>But i've keep doing webdesign, and that was and is the thing i like the most, and my last four years
+						were dedicated to this. First at <a href="http://vilt-group.com"
+							target="_blank"><strong>VILT</strong></a> where i did some projects as UX /UI and front-end
+						consultant during almost 3 years.</p>
+					<span class="cd-date">Feb 2013</span>
+				</div>
+				<!-- cd-timeline-content -->
 			</div>
-			<!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<p>But i've keep doing webdesign, and that was and is the thing i like the most, and my last four years were dedicated to this. First at <a href="http://vilt-group.com" target="_blank"><strong>VILT</strong></a> where i did some projects as UX /UI and front-end consultant during almost 3 years.</p>
-				<span class="cd-date">Feb 2013</span>
-			</div>
-			<!-- cd-timeline-content -->
-		</div>
+		
 		<!-- cd-timeline-block -->
 
 
@@ -128,7 +142,9 @@
 
 			<div class="cd-timeline-content">
 
-				<p>In the last one and a half years i did user experience and interface design at the User Experience team at <a href="http://nos.pt" target="_blank"><strong>NOS</strong></a> spending also some time developing html and css to some ponctual projects.</p>
+				<p>In the last one and a half years i did user experience and interface design at the User Experience
+					team at <a href="http://nos.pt" target="_blank"><strong>NOS</strong></a> spending also some time
+					developing HTML and CSS to some ponctual projects.</p>
 				<span class="cd-date">Sep 2015</span>
 			</div>
 			<!-- cd-timeline-content -->
@@ -141,32 +157,59 @@
 			<!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>2017</h2>
-				<p>New year, new resolutions and i've decided to move myself to a new adventure earlier this year.</p>
-				<span class="cd-date">Jan 02</span>
+				
+				<p>In 2017, I've started at 360imprimir as a Product Manager/ Designer.</p>
+					<p>There I was responsible for:
+						- A&B Testing and Personalization of the website;
+						- Benchmarking and CRO;
+						- Product Design (it evolves creating all user and screen flows, wireframing and visual design steps);
+						- Product Specifications;
+						- Close relationship with IT teams regarding SCRUM Sprints Methodology.</p>
+				<span class="cd-date">Jan 02, 2017</span>
 			</div>
 			<!-- cd-timeline-content -->
 		</div>
 		<!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+				<div class="cd-timeline-img cd-movie">
+				</div>
+				<!-- cd-timeline-img -->
+	
+				<div class="cd-timeline-content">
+					
+					<p>In 2018, I became Lead Product Designer at <a href="https://advertio.com" target="_blank">advertio</a></p>
+					<p>Currently I am the bridge between design, development and product teams.</p>
+					<span class="cd-date">March, 2018</span>
+				</div>
+				<!-- cd-timeline-content -->
+			</div>
 	</section>
 	<!-- cd-timeline -->
 	<section id="professional" class="professional-container">
-		<h3>Those are the 3 essential steps in my working process:</h3></div>
 		<div class="professional-container-skills row" data-animate="fade-in">
 			<div class="small-12 medium-4 columns ux">
 				<img src="images/ux.svg">
 				<p>User Experience Design</p>
-				<p class="desc">Actualy the most important concept here. When i started to know more things about all this process my work started to make more sense. The goal is to make a service efficient but also pleasurable (webapp, native mobile app etc), trying to not do something based on my ego or in what i think that's right.</p>
+				<p class="desc">Actualy the most important concept here. When i started to know more things about all
+					this process my work started to make more sense. The goal is to make a service efficient but also
+					pleasurable (webapp, native mobile app etc), trying to not do something based on my ego or in what i
+					think that's right.</p>
 			</div>
 			<div class="small-12 medium-4 columns ui">
 				<img src="images/ui.svg">
 				<p>User Interface Design</p>
-				<p class="desc">This step is where the dreams become visually possible. It is an exaustive step where i need to keep the interface simpler but beatiful at the same time. Definitly is the step where the product really born.</p>
+				<p class="desc">This step is where the dreams become visually possible. It is an exaustive step where i
+					need to keep the interface simpler but beatiful at the same time. Definitly is the step where the
+					product really born.</p>
 			</div>
 			<div class="small-12 medium-4 columns dev">
 				<img src="images/dev.svg">
 				<p>A bit of Front-end Development</p>
-				<p class="desc">I don't consider myself as a skilled and complete front-end developer, but i like to know everything about it. I like to design a product also knowing the diference of the implementation of the solutions A , B and C. This turns my team work a little more effective, and completes me as a Designer. </p>
+				<p class="desc">I don't consider myself as a skilled and complete front-end developer, but i like to
+					know everything about it. I like to design a product also knowing the diference of the
+					implementation of the solutions A , B and C. This turns my team work a little more effective, and
+					completes me as a Designer. </p>
 			</div>
 
 	</section>
@@ -179,21 +222,27 @@
 	<nav class="cd-stretchy-nav">
 		<a class="cd-nav-trigger" href="#0"> <span class="cd-nav-trigger-icon"></span> </a>
 		<ul>
-			<li><a href="#particles" class="scroll"><span class="cd-stretchy-nav-label">Home</span><div class=" cd-stretchy-nav-icon"><i class="fi-home"></i></div></a></li>
-			<li><a href="#timeline" class="scroll"><span class="cd-stretchy-nav-label">Bio</span><i class=" cd-stretchy-nav-icon fi-book"></i></a></li>
-			<li><a href="#professional" class="scroll"><span class="cd-stretchy-nav-label">What i do</span><i class=" cd-stretchy-nav-icon fi-torso-female"></i></a></li>
-			<li><a href="#portfolio" class="scroll"><span class="cd-stretchy-nav-label">Recent works</span><i class="cd-stretchy-nav-icon  fi-photo"></i></a></li>
+			<li><a href="#particles" class="scroll"><span class="cd-stretchy-nav-label">Home</span>
+					<div class=" cd-stretchy-nav-icon"><i class="fi-home"></i></div>
+				</a></li>
+			<li><a href="#timeline" class="scroll"><span class="cd-stretchy-nav-label">Bio</span><i
+						class=" cd-stretchy-nav-icon fi-book"></i></a></li>
+			<li><a href="#professional" class="scroll"><span class="cd-stretchy-nav-label">What i do</span><i
+						class=" cd-stretchy-nav-icon fi-torso-female"></i></a></li>
+			<li><a href="#portfolio" class="scroll"><span class="cd-stretchy-nav-label">Recent works</span><i
+						class="cd-stretchy-nav-icon  fi-photo"></i></a></li>
 		</ul>
 		<span aria-hidden="true" class="stretchy-nav-bg"></span>
 	</nav>
 	<footer>
-		<p>If you want to say hello mail me <a href="mailto:dizparada@gmail.com" target="_blank"> dizparada@gmail.com</a></p>
-		<p>Dizparada&copy; 2017</p>
+		<p>If you want to say hello mail me <a href="mailto:dizparada@gmail.com" target="_blank">
+				dizparada@gmail.com</a></p>
+		<p>Dizparada&copy; 2019</p>
 	</footer>
 	<!-- all js here -->
 	<script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type='text/javascript' src="bower_components/foundation-sites/dist/foundation.min.js"></script>
-	<script type='text/javascript' src='js/jquery.particleground.js'></script>
+	<script type='text/javascript' src='js/particles.js'></script>
 	<script type='text/javascript' src="js/app.js"></script>
 	<script>
 		(function (i, s, o, g, r, a, m) {
