--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 			<div class="cloud"></div>
 		</div>
 	</div>
-
+	<section class="quote-section">
+		<h2>“For me, good design is a solution that combines technology, usability, user needs, and visual arts to produce something that the world didn’t know it was missing.”</h2>
+	</section>
 	<section id="timeline" class="cd-container">
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
@@ -107,9 +109,7 @@
 		</div>
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
-
 			</div>
-
 			<div class="cd-timeline-content">
 				<p>Coincidently or not, my next job was creating educational resources at <a href="http://leya.com"
 						target="_blank"><strong>Leya Mediabooks</strong></a>.</p>
@@ -118,30 +118,23 @@
 			<!-- cd-timeline-content -->
 		</div>
 		<div class="cd-timeline-block">
-				<div class="cd-timeline-img cd-movie">
-					</div>
-				<div class="cd-timeline-content">
-					<p>But i've keep doing webdesign, and that was and is the thing i like the most, and my last four years
-						were dedicated to this. First at <a href="http://vilt-group.com"
-							target="_blank"><strong>VILT</strong></a> where i did some projects as UX /UI and front-end
-						consultant during almost 3 years.</p>
-					<span class="cd-date">Feb 2013</span>
-				</div>
-				<!-- cd-timeline-content -->
+			<div class="cd-timeline-img cd-movie">
 			</div>
-		
-		<!-- cd-timeline-block -->
-
-
-
+			<div class="cd-timeline-content">
+				<p>But i've keep doing webdesign, and that was and is the thing i like the most, and my last four years
+					were dedicated to this. First at <a href="http://vilt-group.com"
+						target="_blank"><strong>VILT</strong></a> where I did some projects as UX /UI and Front-end
+					consultant during almost 3 years.</p>
+				<span class="cd-date">Feb 2013</span>
+			</div>
+			<!-- cd-timeline-content -->
+		</div>
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 
 			</div>
 			<!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
-
 				<p>In the last one and a half years i did user experience and interface design at the User Experience
 					team at <a href="http://nos.pt" target="_blank"><strong>NOS</strong></a> spending also some time
 					developing HTML and CSS to some ponctual projects.</p>
@@ -150,40 +143,48 @@
 			<!-- cd-timeline-content -->
 		</div>
 		<!-- cd-timeline-block -->
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-movie">
+			</div>
+			<!-- cd-timeline-img -->
+			<div class="cd-timeline-content">
 
+				<p>In 2017, I've started at 360imprimir as a Product Manager/ Designer.</p>
+				<p>There I was responsible for:
+					- A&B Testing and Personalization of the website;
+					- Benchmarking and CRO;
+					- Product Design (it evolves creating all user and screen flows, wireframing and visual design
+					steps);
+					- Product Specifications;
+					- Close relationship with IT teams regarding SCRUM Sprints Methodology.</p>
+				<span class="cd-date">Jan 02, 2017</span>
+			</div>
+			<!-- cd-timeline-content -->
+		</div>
+		<!-- cd-timeline-block -->
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-movie">
+			</div>
+			<!-- cd-timeline-img -->
+			<div class="cd-timeline-content">
+				<p>In Feb 2018, I wrote my first article on medium <a href="https://medium.com/swlh/how-a-good-ui-becomes-a-good-ux-aa7e08a75cd" target="_blank"> How a good UI becomes a good UX</a> </p>
+				<span class="cd-date">Feb, 2018</span>
+			</div>
+			<!-- cd-timeline-content -->
+		</div>
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 			</div>
 			<!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				
-				<p>In 2017, I've started at 360imprimir as a Product Manager/ Designer.</p>
-					<p>There I was responsible for:
-						- A&B Testing and Personalization of the website;
-						- Benchmarking and CRO;
-						- Product Design (it evolves creating all user and screen flows, wireframing and visual design steps);
-						- Product Specifications;
-						- Close relationship with IT teams regarding SCRUM Sprints Methodology.</p>
-				<span class="cd-date">Jan 02, 2017</span>
+
+				<p>In 2018, I became Lead Product Designer at <a href="https://advertio.com" target="_blank">advertio</a></p>
+				<p>Currently I am the bridge between design, development and product teams.</p>
+				<span class="cd-date">March, 2018</span>
 			</div>
 			<!-- cd-timeline-content -->
 		</div>
-		<!-- cd-timeline-block -->
-
-		<div class="cd-timeline-block">
-				<div class="cd-timeline-img cd-movie">
-				</div>
-				<!-- cd-timeline-img -->
-	
-				<div class="cd-timeline-content">
-					
-					<p>In 2018, I became Lead Product Designer at <a href="https://advertio.com" target="_blank">advertio</a></p>
-					<p>Currently I am the bridge between design, development and product teams.</p>
-					<span class="cd-date">March, 2018</span>
-				</div>
-				<!-- cd-timeline-content -->
-			</div>
 	</section>
 	<!-- cd-timeline -->
 	<section id="professional" class="professional-container">
