--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="UX and UI designer portfolio, Lisbon, Portugal">
 	<meta name="author" content="dizparada is a UX &amp; UI designer based in Lisbon Portugal">
-	<title>Dizparada: UX &amp UI Designer</title>
+	<title>Dizparada - Product Designer from Lisbon</title>
 	<link type='text/css' rel="stylesheet" href="css/app.css">
 	<link rel="shortcut icon" href="favicon.ico">
 </head>
@@ -17,7 +17,7 @@
 		<canvas id="particles"></canvas>
 		<div id="intro">
 			<h1>Hi I'm Dizparada</h1>
-			<h2>a passionate UX &amp; UI designer, from Portugal.</h2>
+			<h2>a passionate Product Designer, from Portugal.</h2>
 			<ul class="social">
 				<li>
 					<a href="https://medium.com/@dizparada" target="_blank" title="medium" alt="medium"><img
@@ -44,7 +44,8 @@
 		</div>
 	</div>
 	<section class="quote-section">
-		<h2>“For me, good design is a solution that combines technology, usability, user needs, and visual arts to produce something that the world didn’t know it was missing.”</h2>
+		<h2>“For me, good design is a solution that combines technology, usability, user needs, and visual arts to
+			produce something that the world didn’t know it was missing.”</h2>
 	</section>
 	<section id="timeline" class="cd-container">
 		<div class="cd-timeline-block">
@@ -53,8 +54,7 @@
 			<div class="cd-timeline-content">
 
 				<p>I'm dizparada because my surname means stopped (my original name is Ana 'Parada'), so I 'nicknamed’
-					myself with a name that shows the
-					opposite.</p>
+					myself with a name that shows the opposite.</p>
 				<span class="cd-date">Dizparada's born</span>
 			</div>
 
@@ -83,7 +83,7 @@
 
 			<div class="cd-timeline-content">
 
-				<p>In 2006, when i was taking my bachelor in New Technologies of Communication, at University of Aveiro.
+				<p>In 2006, when I was taking my bachelor in New Technologies of Communication, at University of Aveiro.
 					I did my first projects
 					using HTML and PHP as also some websites with small backoffices as a freelancer webdeveloper.</p>
 				<span class="cd-date">Sep 2006</span>
@@ -98,10 +98,10 @@
 
 			<div class="cd-timeline-content">
 
-				<p>Later (2009), i started the Master in Multimedia at Faculty of Enginnering of University of Porto.
-					During my mmaster thesis I've designed and developed a working prototype web application that
-					allowed students help
-					each other learning, regarding different subjects and suports -
+				<p>Later (2009), I started the Masters degree in Multimedia at Faculty of Enginnering of University of
+					Porto.
+					During my master thesis I've designed and developed a working prototype web application that
+					allowed students help each other learning, regarding different subjects and suports -
 					<a href="https://sigarra.up.pt/fpceup/pt/pub_geral.pub_view?pi_pub_base_id=19543"
 						target="_blank"><strong>Weedu.</strong></a></p>
 				<span class="cd-date">Sep 2009</span>
@@ -121,11 +121,21 @@
 			<div class="cd-timeline-img cd-movie">
 			</div>
 			<div class="cd-timeline-content">
-				<p>But i've keep doing webdesign, and that was and is the thing i like the most, and my last four years
+				<p>But I've keep doing webdesign, and that was the thing I like the most, so my last four years
 					were dedicated to this. First at <a href="http://vilt-group.com"
 						target="_blank"><strong>VILT</strong></a> where I did some projects as UX /UI and Front-end
 					consultant during almost 3 years.</p>
-				<span class="cd-date">Feb 2013</span>
+				<p>I've worked on
+					<ul>
+						<li><a href="https://www.cp.pt/passageiros/pt">Comboios de Portugal website</a> </li>
+						<li>Vitória Seguros - Agents Portal and Simulator of Modular Products on the Web,</li>
+						<li>SIBS Processos, S.A. - Optical Archive Solution, </li>
+						<li>Caixa Geral de Depósitos Pilot project for Mobile Payments, </li>
+						<li>La Caixa - Obra Social and </li>
+						<li>Comité Paralímpico de Portugal website (pro bono)</li>
+					</ul>
+
+					<span class="cd-date">Feb 2013</span>
 			</div>
 			<!-- cd-timeline-content -->
 		</div>
@@ -135,9 +145,17 @@
 			</div>
 			<!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
-				<p>In the last one and a half years i did user experience and interface design at the User Experience
+				<p>In the last one and a half years I did User Experience and Interface design at the User Experience
 					team at <a href="http://nos.pt" target="_blank"><strong>NOS</strong></a> spending also some time
 					developing HTML and CSS to some ponctual projects.</p>
+				<p>I've worked in projects like <strong><a href="https://cliente.nos.pt/" target="_blank">Cliente
+							NOS</a></strong> , <strong><a
+							href="http://www.nos.pt/particulares/contactos/Pages/contacte-nos.aspx"
+							target="_blank">Contacta NOS</a></strong> and
+					<strong><a href="https://play.google.com/store/apps/details?id=pt.nos.selfcare&hl=en"> app Cliente
+							NOS for Android</a></strong> and <strong><a
+							href="https://itunes.apple.com/pt/app/cliente-nos/id1105930725?mt=8" target="_blank">for
+							IOS</a></strong></p>
 				<span class="cd-date">Sep 2015</span>
 			</div>
 			<!-- cd-timeline-content -->
@@ -150,14 +168,18 @@
 			<div class="cd-timeline-content">
 
 				<p>In 2017, I've started at 360imprimir as a Product Manager/ Designer.</p>
-				<p>There I was responsible for:
-					- A&B Testing and Personalization of the website;
-					- Benchmarking and CRO;
-					- Product Design (it evolves creating all user and screen flows, wireframing and visual design
-					steps);
-					- Product Specifications;
-					- Close relationship with IT teams regarding SCRUM Sprints Methodology.</p>
-				<span class="cd-date">Jan 02, 2017</span>
+				<p>There I was responsible for:<p>
+						<ul>
+							<li>A&B Testing and Personalization of the website;</li>
+							<li>Benchmarking and CRO;</li>
+							<li>Product Design (it evolves creating all user and screen flows, wireframing and visual
+								design
+								steps);</li>
+							<li>Product Specifications;</li>
+							<li>Close relationship with IT teams regarding SCRUM Sprints Methodology.</li>
+						</ul>
+
+						<span class="cd-date">Jan 02, 2017</span>
 			</div>
 			<!-- cd-timeline-content -->
 		</div>
@@ -167,7 +189,9 @@
 			</div>
 			<!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
-				<p>In Feb 2018, I wrote my first article on medium <a href="https://medium.com/swlh/how-a-good-ui-becomes-a-good-ux-aa7e08a75cd" target="_blank"> How a good UI becomes a good UX</a> </p>
+				<p>In Feb 2018, I wrote my first article on medium <strong><a
+							href="https://medium.com/swlh/how-a-good-ui-becomes-a-good-ux-aa7e08a75cd"
+							target="_blank">How a good UI becomes a good UX</a></strong></p>
 				<span class="cd-date">Feb, 2018</span>
 			</div>
 			<!-- cd-timeline-content -->
@@ -179,7 +203,8 @@
 
 			<div class="cd-timeline-content">
 
-				<p>In 2018, I became Lead Product Designer at <a href="https://advertio.com" target="_blank">advertio</a></p>
+				<p>In 2018, I became Product Designer at <strong><a href="https://advertio.com"
+							target="_blank">advertio</a></strong></p>
 				<p>Currently I am the bridge between design, development and product teams.</p>
 				<span class="cd-date">March, 2018</span>
 			</div>
@@ -192,22 +217,22 @@
 			<div class="small-12 medium-4 columns ux">
 				<img src="images/ux.svg">
 				<p>User Experience Design</p>
-				<p class="desc">Actualy the most important concept here. When i started to know more things about all
+				<p class="desc">Actualy the most important concept here. When I started to know more things about all
 					this process my work started to make more sense. The goal is to make a service efficient but also
-					pleasurable (webapp, native mobile app etc), trying to not do something based on my ego or in what i
+					pleasurable (webapp, native mobile app etc), trying to not do something based on my ego or in what I
 					think that's right.</p>
 			</div>
 			<div class="small-12 medium-4 columns ui">
 				<img src="images/ui.svg">
 				<p>User Interface Design</p>
-				<p class="desc">This step is where the dreams become visually possible. It is an exaustive step where i
+				<p class="desc">This step is where the dreams become visually possible. It is an exaustive step where I
 					need to keep the interface simpler but beatiful at the same time. Definitly is the step where the
 					product really born.</p>
 			</div>
 			<div class="small-12 medium-4 columns dev">
 				<img src="images/dev.svg">
 				<p>A bit of Front-end Development</p>
-				<p class="desc">I don't consider myself as a skilled and complete front-end developer, but i like to
+				<p class="desc">I don't consider myself as a skilled and complete front-end developer, but I like to
 					know everything about it. I like to design a product also knowing the diference of the
 					implementation of the solutions A , B and C. This turns my team work a little more effective, and
 					completes me as a Designer. </p>
