--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					consultant during almost 3 years.</p>
 				<p>I've worked on
 					<ul>
-						<li><a href="https://www.cp.pt/passageiros/pt">Comboios de Portugal website</a> </li>
+						<li><strong><a href="https://www.cp.pt/passageiros/pt">Comboios de Portugal website</a> </strong></li>
 						<li>Vitória Seguros - Agents Portal and Simulator of Modular Products on the Web,</li>
 						<li>SIBS Processos, S.A. - Optical Archive Solution, </li>
 						<li>Caixa Geral de Depósitos Pilot project for Mobile Payments, </li>
@@ -183,6 +183,18 @@
 			</div>
 			<!-- cd-timeline-content -->
 		</div>
+		<div class="cd-timeline-block">
+				<div class="cd-timeline-img cd-movie">
+				</div>
+				<!-- cd-timeline-img -->
+				<div class="cd-timeline-content">
+					<p>Between May and Decemeber of 2017 , I redesigned <strong><a
+								href="https://itunes.apple.com/us/app/moviepass/id556183291?mt=8"
+								target="_blank">moviepass app for IOS</a></strong></p>
+					<span class="cd-date">2017</span>
+				</div>
+				<!-- cd-timeline-content -->
+			</div>
 		<!-- cd-timeline-block -->
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
